[PIL-298][JA] fix for long name for error messages to word wrap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,6 @@
 .js-enabled .js-visible {
   display: inline-block !important;
 }
-.long-word {
+.long-word, .govuk-error-summary, .govuk-error-message {
   word-wrap: break-word;
 }
